# coderefinery_practice_cmake_workshop

./: .gitignore  CPPLINT.cfg
0_brief_tour_calculator/: CMakeLists.txt
2_modular_helloworld_coderefinery_cmake/: CMakeLists.txt  greeting.cpp  hello.cpp
3_property-visibility/: CMakeLists.txt  main.cpp
3_property-visibility/world/: world.cpp
4_elementary_cellular_automata/problem_statement_automata/cxx/: .vimrc.lua
4_elementary_cellular_automata/solution_automata/cxx/: CMakeLists.txt
4_elementary_cellular_automata/solution_automata/cxx/src/: CMakeLists.txt
4_elementary_cellular_automata/solution_automata/cxx/src/parser/: CMakeLists.txt
5_os_and_system_discovery/: CMakeLists.txt  config-template.h  example.cpp
6_finding_and_using_dependencies/6a_openmp_detection_and_usage/: example.cpp
6_finding_and_using_dependencies/6b_mpi_detection_and_usage/: example.cpp
7_testing_with_ctest/7a_basic_ctest_example/: .vimrc.lua  CMakeLists.txt  main.cpp  sum_integers.cpp  sum_integers.hpp  test.cpp  test2.cpp
7_testing_with_ctest/7b_testing_in_parallel/: CMakeLists.txt
8_fetchcontent_unit_testing_with_catch2/: CMakeLists.txt  test.cpp
